subtest-impl/tests/snapshots/expand_impl__snapshots@readme_inheritance_inherit_example.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/readme_inheritance_inherit_example.rs
---
#[tokio::test]
async fn value_can_be_sent_async() -> anyhow::Result<()> {
    let (sender, receiver) = tokio::sync::mpsc::channel(5);
    sender.send("Hello!").await?;
    drop(receiver);
    Ok(())
}
mod value_can_be_sent_async_subtests {
    use super::*;
    #[tokio::test]
    #[allow(clippy::unnecessary_wraps)]
    async fn value_can_be_received() -> anyhow::Result<()> {
        let (sender, receiver) = tokio::sync::mpsc::channel(5);
        sender.send("Hello!").await?;
        let mut receiver = receiver;
        let value = receiver.try_recv()?;
        assert_eq!(value, "Hello!");
        Ok(())
    }
}
