subtest-impl/tests/snapshots/expand_impl__snapshots@readme_todo_list_example.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/readme_todo_list_example.rs
---
#[test]
fn add_creates_pending_task() {
    let mut list = TodoList::new();
    let id = list.add("Buy milk");
    let task = list.get(id).unwrap();
    assert_eq!(task.status, TaskStatus::Pending);
}
mod add_creates_pending_task_subtests {
    use super::*;
    #[test]
    fn complete_marks_task_completed() {
        #[allow(unused_variables)]
        #[allow(unused_mut)]
        let mut list = TodoList::new();
        #[allow(unused_variables)]
        let id = list.add("Buy milk");
        list.complete(id).unwrap();
        assert_eq!(list.get(id).unwrap().status, TaskStatus::Completed);
    }
    #[test]
    fn cancel_marks_task_cancelled() {
        #[allow(unused_variables)]
        #[allow(unused_mut)]
        let mut list = TodoList::new();
        #[allow(unused_variables)]
        let id = list.add("Buy milk");
        list.cancel(id).unwrap();
        assert_eq!(list.get(id).unwrap().status, TaskStatus::Cancelled);
    }
}
